toolchains/typescript/tests/snapshots/sync_project_test__sync_project__create_missing_config__creates_if_missing.snap
---
source: toolchains/typescript/tests/sync_project_test.rs
expression: "fs::read_file(cfg_path).unwrap()"
---
{
  "extends": "../tsconfig.options.json",
  "include": [
    "**/*"
  ],
  "references": []
}
